--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -27,6 +27,7 @@
             </intent-filter>
         </activity>
         <activity
+             android:theme="@android:style/Theme.Dialog" 
             android:name=".TrackingActivity"
             android:label="@string/title_activity_tracking" >
         </activity>
