--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.wifiprojekt"
+    package="com.example.wifisonde"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -19,7 +19,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="de.compaso.wifiprojekt.MainActivity"
+            android:name="de.compaso.wifisonde.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,7 +28,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="de.compaso.wifiprojekt.TrackingActivity"
+            android:name="de.compaso.wifisonde.TrackingActivity"
             android:label="@string/title_activity_tracking" >
         </activity>
     </application>
