--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="11"
-        android:targetSdkVersion="21" />
+        android:targetSdkVersion="22" />
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
@@ -19,7 +19,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="de.compaso.wifiprojekt.MainActivity"
+            android:name="de.compaso.wifisonde.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,7 +28,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="de.compaso.wifiprojekt.TrackingActivity"
+            android:name="de.compaso.wifisonde.TrackingActivity"
             android:label="@string/title_activity_tracking" >
         </activity>
     </application>
